<resources>
    <string name="app_name">Android_IGSHPA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="program_details">Program Details</string>
    <string name="scan_qr">Scan QR</string>
    <string name="igshpa_technical_research_conference_and_expo_march_14_16_2017_crowne_plaza_denver_airport_convention_center">IGSHPA Technical / Research Conference and Expo March 14-16, 2017; Crowne Plaza Denver Airport Convention Center</string>
    <string name="conference">Conference</string>
    <string name="geothermal">Geothermal</string>
    <string name="Home">Home</string>
    <string name="Geothermal">Geothermal</string>
    <string name="Training">Training</string>
    <string name="Conference">Conference</string>
    <string name="res_main">A GSHP system can be installed in a residential structure of any size, anywhere, whether it is single-family or multi-family. GSHPs can be installed on almost any size lot: under lawns, landscaped areas, driveways, or the house itself. An existing house can be retrofitted with a GSHP using the ductwork that is already there. Your dealer/installer will be able to determine ductwork requirements and if any minor modifications are needed. Home builders and homeowners can both take advantage of the special financing that is offered in many locations on a GSHP either through the utility or manufacturer. The Department of Energy (DOE) and the Environmental Protection Agency (EPA) have both endorsed ground source heat pump systems as among the most energy efficient and environmentally friendly heating, cooling, and water heating systems available. In a 1993 report, the EPA concluded that geothermal technologies represent a major opportunity for reducing national energy use and pollution, while delivering comfort, reliability and savings to homeowners.</string>
    <string name="res_benifits" formatted="false">- Can be a combination heating/cooling and hot water heating system
        - Some can save you up to 50% on your water-heating bill by preheating tank water
        - Made of mechanical components that are either buried in the ground or located inside the home
        - About the same size as a traditional heating/cooling unit
        - Pipe carries up to a 50-year warranty
        - Can cut energy consumption by 20 to 50% and reduce maintenance costs
        - Keep the air warmer in the winter (90 -105¡ F) and at a more consistent temperature throughout the home, eliminating the hot and cold spots common with other systems
        - Very quiet, providing a pleasant environment inside and outside the home - No noisy fan units to disturb outdoor activities
        - No exposed equipment outdoors; children or pets cannot injure themselves or damage exterior units - No open flame, flammable fuel or potentially dangerous fuel storage tanks</string>
    <string name="geo_about">Ground source heat pumps can be categorized as having closed or open loops, and those loops can be installed in three ways: horizontally, vertically, or in a pond/lake. The type chosen depends on the available land areas and the soil and rock type at the installation site. These factors will help determine the most economical choice for installation of the ground loop. Closed loop systems can be water-based or refrigerant-based. For water-based, water or antifreeze solution is circulated through plastic pipes buried beneath the earth\'s surface. Refrigerant-based relies on refrigerant – typically R-410A – directly flowing through copper tubing buried in the ground. During the winter, the fluid collects heat from the earth and carries it through the system and into the building. During the summer, the system reverses itself to cool the building by pulling heat from the building, carrying it through the system and placing it in the ground. This process creates free hot water in the summer and delivers substantial hot water savings in the winter. Open loop systems operate on the same principle as closed loop systems and can be installed where an adequate supply of suitable water is available and open discharge is feasible. Benefits similar to the closed loop system are obtained.</string>
    <string name="geo">Ground source heat pumps (GSHPs) are electrically powered systems that tap the stored energy of the greatest solar collector in existence: the earth. These systems use the earth\'s relatively constant temperature to provide heating, cooling, and hot water for homes and commercial buildings.</string>
    <string name="res_savings" formatted="false">• One of the most efficient residential heating and cooling systems available today - Heating efficiencies 50 to 70% higher than other heating systems and cooling efficiencies 20 to 40% higher than available air conditioners - Save money in operating and maintenance costs - Investments recouped in only a few years - Positive cash flow; energy savings usually exceed the cost of the system - Some utilities offer rebates or incentives to their customers who purchase GSHPs. To see what your state has to offer click here. - Many heat pump manufacturers, local utilities, and lending institutions have special financing for homeowners who are installing GSHPs</string>
    <string name="com_main">GSHPs are a cost effective, energy efficient, and environmentally friendly way of heating and cooling buildings. Both the DOE and the EPA have endorsed the technology. GSHPs reliably deliver quality air-conditioning and heating, on demand, in every season. GSHPs are appropriate for new construction as well as retrofits of older buildings. Nobel Research CenterTheir flexible design requirements make them a good choice for schools, high-rises, government buildings, apartments, and restaurants--almost any commercial property. Lower operating and maintenance costs, durability, and energy conservation make Ground Source Heat Pumps the smart choice for commercial applications.</string>
    <string name="com_benifits" formatted="false">- Simultaneously heat and cool different parts of the same building - Very quiet--users do not know when the system is operating - Can be set up in multiple zones, with each zone having an individual room control - Greater freedoms in building design due to 50-80% less mechanical room space - No outside equipment to hide, eliminating vandalism and roof top units - Pipes have 50-year life expectancy - All electric, which eliminates multiple utility services - Expel boiler and chiller maintenance - Ground heat exchanger is maintenance free and will last 40+ years</string>
    <string name="com_savings" formatted="false">- Very competitive on initial costs and lower lifecycle costs than most HVAC systems. - Savings of 25-50% on energy consumption - Lower peak demand, lowering your operating costs - Water heated with waste heat from air conditioning at no cost in the summer and at substantial savings in the winter - Some utilities offer rebates or incentives to their customers who purchase GSHPs.</string>
    <string name="pub_main1">In order to promote the geoexchange industry by educating the public, IGSHPA produces brochures and booklets with full-color graphics that are available at special member prices. These materials can save you the cost of advertising agencies, promotional consultants, or other fees.</string>
    <string name="pub_main2"><![CDATA[Free standard shipping using USPS priority mail included for continental US plus Alaska & Hawaii. All other orders please call us or email for rates. All orders must be received by 2:00 pm CT to be considered received that day. Orders received after will be processes the next business day. Orders will be sent via USPS priority mail within 3 business days.]]></string>
    <string name="history1">Ground source heat pump technology is the wave of the future, but the concept isn\'t new at all. In fact, Lord Kelvin developed the concept of the heat pump in 1852. In the late 1940\'s, Robert C. Webber, a cellar inventor, was experimenting with his deep freezer. He dropped the temperature in the freezer and touched the outlet pipe and almost burned his hand. He realized heat was being thrown away, so he ran outlets from his freezer to his boilers and provided his family with more hot water than they could use! There was still wasted heat, so he piped hot water through a coil and used a small fan to distribute heat through the house to save coal. Mr. Webber was so pleased with the results that he decided to build a full size heat pump to generate heat for the entire home. Mr. Webber also came up with the idea to pump heat from underground, where the temperature doesn\'t vary much throughout the year. Copper tubing was placed in the ground and freon gas ran through the tubing to gather the ground heat. The gas was condensed in the cellar, gave off its heat and forced the expanded gas to go through the ground coil to pick up another load. Air was moved by a fan and distributed into the home. The next year, Mr. Webber sold his old coal furnace.</string>
    <string name="history2">In the forties, the heat pump was known for its superior efficiency. The efficiency was especially useful in the seventies. The Arab oil embargo awakened conservation awareness and launched interest in energy conservation despite cheap energy prices. That is when Dr. James Bose, professor at Oklahoma State University, came across the heat pump concept in an old engineering text. Dr. Bose used the idea to help a homeowner whose heat pump was dumping scalding water into his pool. Dr. Bose fashioned the heat pump to circulate the water through the pipes instead of dumping the water into the pool. This was the beginning of the new era in geothermal systems. Dr. Bose returned to Oklahoma State University and began to develop his idea. Since then, Oklahoma has become the center of ground source heat pump research and development. The International Ground Source Heat Pump Association was formed in Oklahoma, and is based on the campus of Oklahoma State University, where Dr. Bose served as executive director until his retirement in November of 2013.</string>
    <string name="mission">IGSHPA is an association of companies, professionals and users dedicated to promoting the science, utility and use of geothermal (ground source) heating and cooling technology. IGSHPA accomplishes its mission by:</string>
    <string name="about1">The International Ground Source Heat Pump Association (IGSHPA) is a non-profit, member-driven organization established in 1987 to advance ground source heat pump (GSHP) technology on local, state, national and international levels. Headquartered on the campus of Oklahoma State University in Stillwater, Oklahoma, IGSHPA utilizes state-of-the-art facilities for conducting GSHP system installation training and geothermal research. With its access to the most current advancements in the geothermal industry, IGSHPA is the ideal bridge between the latest technology and the people who benefit from these developments.</string>
</resources>
