<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Geothermal"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/buttonText"
                android:id="@+id/toolbar_title"
                />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="What is IGSHPA?"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/about1"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mission"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/mission"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="• Advocating for ground source heat pump technology"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="• Distributing reliable insight and education"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="• Promoting basic and applied research"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="• Providing a clearinghouse for relevant information"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="• Serving as a forum for the development and dissemination of standards"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="History"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/history1"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/history2"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>