<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Conference"
            android:layout_gravity="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textSize="22sp"
            android:textColor="@color/buttonText"
            android:id="@+id/toolbar_title"
            />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/igshpa_technical_research_conference_and_expo_march_14_16_2017_crowne_plaza_denver_airport_convention_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="22sp"
        android:textColor="@color/buttonText"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>
    <Button
        android:text="Main Page"
        android:layout_height="wrap_content"
        android:id="@+id/mainpage"
        android:background="@drawable/buttonsbackground"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:textColor="@color/buttonText"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/prgmdetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonsbackground"
        android:text="PAST CONFERENCE PRECEEDINGS"
        android:textColor="@color/buttonText" />

    <Button
        android:text="Floor Plan"
        android:layout_height="wrap_content"
        android:id="@+id/floorplan"
        android:background="@drawable/buttonsbackground"
        android:layout_width="150dp"
        android:textColor="@color/buttonText"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />
    <Button
        android:text="@string/scan_qr"
        android:layout_height="wrap_content"
        android:id="@+id/scan"
        android:textColor="@color/buttonText"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonsbackground"
        android:layout_width="150dp" />
</LinearLayout>