<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Commercial"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/buttonText"
                android:id="@+id/toolbar_title"
                />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                android:text="@string/com_main"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="Ground Source Heat Pumps offer great benefits"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                android:text="@string/com_benifits"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="GSHPs offer great savings"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                android:text="@string/com_savings"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>